@@ -50,39 +50,38 @@ class Observer
 {
 public:
 
-       
-	/**
-	 * A constructor.
-	 * No special function so far.
-	 */
-	Observer(){};
-
-	/**
-	 * A destructor.
-	 * No special function so far.
-	 */
-	virtual ~Observer(){};
-
-	/**
-	 * This method need to be reimplemented from the concrete Observer
-	 * and get called by the observed class
-	 * @param pCaller a referenc to the calling object
-	 */
-	virtual void OnChange(Subject<_MessageType> &rCaller,_MessageType rcReason)=0;
-
-	/**
-	 * This method need to be reimplemented from the concrete Observer
-	 * and get called by the observed class
-	 * @param pCaller a referenc to the calling object
-	 */
-	virtual void OnDestroy(Subject<_MessageType> &rCaller){}
+  /**
+   * A constructor.
+   * No special function so far.
+   */
+  Observer(){};
 
   /**
-	 * This method can be reimplemented from the concrete Observer
-	 * and returns the name of the observer. Needed to use the Get 
+   * A destructor.
+   * No special function so far.
+   */
+  virtual ~Observer(){};
+
+  /**
+   * This method need to be reimplemented from the concrete Observer
+   * and get called by the observed class
+   * @param pCaller a referenc to the calling object
+   */
+  virtual void OnChange(Subject<_MessageType> &rCaller,_MessageType rcReason)=0;
+
+  /**
+   * This method need to be reimplemented from the concrete Observer
+   * and get called by the observed class
+   * @param pCaller a referenc to the calling object
+   */
+  virtual void OnDestroy(Subject<_MessageType> &rCaller){}
+
+  /**
+   * This method can be reimplemented from the concrete Observer
+   * and returns the name of the observer. Needed to use the Get 
    * Methode of the Subject.
-	 */
-	virtual const char *Name(void){return 0L;}
+   */
+  virtual const char *Name(void){return 0L;}
 };
 
 /** Subject class
@@ -97,83 +96,95 @@ class Subject
 {
 public:
 
-	typedef  Observer<_MessageType> ObserverType;
-	typedef  _MessageType             MessageType;
-	typedef  Subject<_MessageType>  SubjectType;   
-       
-	/**
-	 * A constructor.
-	 * No special function so far.
-	 */
-	Subject(){};
+  typedef  Observer<_MessageType> ObserverType;
+  typedef  _MessageType             MessageType;
+  typedef  Subject<_MessageType>  SubjectType;   
+     
+  /**
+   * A constructor.
+   * No special function so far.
+   */
+  Subject(){};
 
-	/**
-	 * A destructor.
-	 * No special function so far.
-	 */
-	virtual ~Subject()
-	{
-	  if (_ObserverSet.size() > 0)
-	  {
-		printf("Not detached all observers yet\n");
-		assert(0);
-	  }
-	//	for(std::set<FCObserver * >::iterator Iter=_ObserverSet.begin();Iter!=_ObserverSet.end();Iter++)
-	//  {
-	//    (*Iter)->OnDestroy(*this);   // send OnChange-signal
-	//  }
-	}
-
-	/** Attach an Observer
-	 * Attach an Observer to the list of Observers which get   
-	 * called when Notify is called.
-	 * @param ToObserv A pointer to a concrete Observer
-	 * @see Notify
-	 */
-	void Attach(Observer<_MessageType> *ToObserv)
-	{
-		_ObserverSet.insert(ToObserv);
-	}
-
-	/** Detach an Observer
-	 * Detach an Observer from the list of Observers which get   
-	 * called when Notify is called.
-	 * @param ToObserv A pointer to a concrete Observer
-	 * @see Notify
-	 */
-	void Detach(Observer<_MessageType> *ToObserv)
-	{
-		_ObserverSet.erase(ToObserv);
-	}
-
-	/** Notify all Observers
-	 * Send a message to all Observers attached to this subject.
-	 * The Message depends on the implementation of a concrete 
-	 * Oberserver and Subject.
-	 * @see Notify
-	 */
-	void Notify(_MessageType rcReason)
-	{
-		for(typename std::set<Observer<_MessageType> * >::iterator Iter=_ObserverSet.begin();Iter!=_ObserverSet.end();Iter++)
-			(*Iter)->OnChange(*this,rcReason);   // send OnChange-signal
-	}
-
-	/** Get an Observer by name
-	 * Get a observer by name if the observer reimplements the Name() mthode.
-	 * @see Observer
-	 */
-	Observer<_MessageType> * Get(const char *Name)
-	{
-    const char* OName;
-		for(typename std::set<Observer<_MessageType> * >::iterator Iter=_ObserverSet.begin();Iter!=_ObserverSet.end();Iter++)
+  /**
+   * A destructor.
+   * No special function so far.
+   */
+  virtual ~Subject()
+  {
+    if (_ObserverSet.size() > 0)
     {
-			OName = (*Iter)->Name();   // get the name
+      printf("Not detached all observers yet\n");
+      assert(0);
+    }
+  }
+
+  /** Attach an Observer
+   * Attach an Observer to the list of Observers which get   
+   * called when Notify is called.
+   * @param ToObserv A pointer to a concrete Observer
+   * @see Notify
+   */
+  void Attach(Observer<_MessageType> *ToObserv)
+  {
+#ifdef FC_DEBUG
+    unsigned long count = _ObserverSet.size();
+    printf("Attach observer %p\n", ToObserv);
+    _ObserverSet.insert(ToObserv);
+    if ( _ObserverSet.size() == count )
+      printf("Observer %p already attached\n", ToObserv);
+#else
+    _ObserverSet.insert(ToObserv);
+#endif
+  }
+
+  /** Detach an Observer
+   * Detach an Observer from the list of Observers which get   
+   * called when Notify is called.
+   * @param ToObserv A pointer to a concrete Observer
+   * @see Notify
+   */
+  void Detach(Observer<_MessageType> *ToObserv)
+  {
+#ifdef FC_DEBUG
+    unsigned long count = _ObserverSet.size();
+    printf("Detach observer %p\n", ToObserv);
+    _ObserverSet.erase(ToObserv);
+    if ( _ObserverSet.size() == count )
+      printf("Observer %p already detached\n", ToObserv);
+#else
+    _ObserverSet.erase(ToObserv);
+#endif
+  }
+
+  /** Notify all Observers
+   * Send a message to all Observers attached to this subject.
+   * The Message depends on the implementation of a concrete 
+   * Oberserver and Subject.
+   * @see Notify
+   */
+  void Notify(_MessageType rcReason)
+  {
+    for(typename std::set<Observer<_MessageType> * >::iterator Iter=_ObserverSet.begin();Iter!=_ObserverSet.end();Iter++)
+      (*Iter)->OnChange(*this,rcReason);   // send OnChange-signal
+  }
+
+  /** Get an Observer by name
+   * Get a observer by name if the observer reimplements the Name() mthode.
+   * @see Observer
+   */
+  Observer<_MessageType> * Get(const char *Name)
+  {
+    const char* OName;
+    for(typename std::set<Observer<_MessageType> * >::iterator Iter=_ObserverSet.begin();Iter!=_ObserverSet.end();Iter++)
+    {
+      OName = (*Iter)->Name();   // get the name
       if(OName && strcmp(OName,Name) == 0)
         return *Iter;
     }
 
     return 0L;
-	}
+  }
 
   /** Clears the list of all registered observers. 
    * @note Using this function in your code may be an indication of design problems.
@@ -185,9 +196,8 @@ public:
 
 
 protected:
-	/// Vector of attached observers
-	std::set<Observer <_MessageType> *> _ObserverSet;
-
+  /// Vector of attached observers
+  std::set<Observer <_MessageType> *> _ObserverSet;
 };
 
 
